// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MacRegistrationListForm should create list successfully 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/tenant-id/policies/mac-registration-lists"
              >
                Policies & Profiles &gt; MAC Registration Lists
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Add MAC Registration List
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 kqqYPH"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 fzFjZo"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Settings
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-steps-item ant-steps-item-wait"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Summary
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="0"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-14"
                  >
                    <h3
                      class="ant-typography styledComponents__Title-sc-1ibvcih-3 dConwg"
                    >
                      Settings
                    </h3>
                    <div
                      class="ant-row"
                    >
                      <div
                        class="ant-col ant-col-14"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class="ant-form-item-required"
                                for="0_name"
                                title="Policy Name"
                              >
                                Policy Name
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <input
                                    class="ant-input"
                                    id="0_name"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                for="0_listExpiration"
                                title="List Expiration"
                              >
                                List Expiration
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-radio-group ant-radio-group-outline"
                                    id="0_listExpiration"
                                  >
                                    <div
                                      class="ant-space ant-space-vertical"
                                    >
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <label
                                          class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio ant-radio-checked"
                                          >
                                            <input
                                              checked=""
                                              class="ant-radio-input"
                                              type="radio"
                                              value="1"
                                            />
                                            <span
                                              class="ant-radio-inner"
                                            />
                                          </span>
                                          <span>
                                            Never expires
                                          </span>
                                        </label>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                        style="margin-bottom: 8px;"
                                      >
                                        <div
                                          class="ant-space ant-space-horizontal ant-space-align-center"
                                        >
                                          <div
                                            class="ant-space-item"
                                          >
                                            <label
                                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                            >
                                              <span
                                                class="ant-radio"
                                              >
                                                <input
                                                  class="ant-radio-input"
                                                  type="radio"
                                                  value="2"
                                                />
                                                <span
                                                  class="ant-radio-inner"
                                                />
                                              </span>
                                              <span>
                                                By date
                                              </span>
                                            </label>
                                          </div>
                                        </div>
                                      </div>
                                      <div
                                        class="ant-space-item"
                                      >
                                        <div
                                          class="ant-space ant-space-horizontal ant-space-align-center"
                                        >
                                          <div
                                            class="ant-space-item"
                                          >
                                            <label
                                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                            >
                                              <span
                                                class="ant-radio"
                                              >
                                                <input
                                                  class="ant-radio-input"
                                                  type="radio"
                                                  value="3"
                                                />
                                                <span
                                                  class="ant-radio-inner"
                                                />
                                              </span>
                                              <span>
                                                After...
                                              </span>
                                            </label>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-form-item"
                            >
                              <div
                                class="ant-row ant-form-item-row"
                              >
                                <div
                                  class="ant-col ant-form-item-label"
                                >
                                  <label
                                    class=""
                                    for="0_autoCleanup"
                                    title="Automatically clean expired entries"
                                  >
                                    Automatically clean expired entries
                                  </label>
                                </div>
                                <div
                                  class="ant-col ant-form-item-control"
                                >
                                  <div
                                    class="ant-form-item-control-input"
                                  >
                                    <div
                                      class="ant-form-item-control-input-content"
                                    >
                                      <button
                                        aria-checked="true"
                                        class="ant-switch ant-switch-checked"
                                        id="0_autoCleanup"
                                        role="switch"
                                        type="button"
                                      >
                                        <div
                                          class="ant-switch-handle"
                                        />
                                        <span
                                          class="ant-switch-inner"
                                        />
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                for="0_defaultAccess"
                                title="Default Access"
                              >
                                Default Access
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
                                  >
                                    <div
                                      class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                                    >
                                      <label
                                        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item"
                                      >
                                        <span
                                          class="ant-radio-button ant-radio-button-checked"
                                        >
                                          <input
                                            checked=""
                                            class="ant-radio-button-input"
                                            type="radio"
                                            value="accept"
                                          />
                                          <span
                                            class="ant-radio-button-inner"
                                          />
                                        </span>
                                        <span>
                                          ACCEPT
                                        </span>
                                      </label>
                                      <label
                                        class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item"
                                      >
                                        <span
                                          class="ant-radio-button"
                                        >
                                          <input
                                            class="ant-radio-button-input"
                                            type="radio"
                                            value="reject"
                                          />
                                          <span
                                            class="ant-radio-button-inner"
                                          />
                                        </span>
                                        <span>
                                          REJECT
                                        </span>
                                      </label>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-24"
                      >
                        <div
                          class="ant-row ant-row-middle"
                        >
                          <div
                            class="ant-col ant-col-14"
                          >
                            <div
                              class="ant-form-item"
                            >
                              <div
                                class="ant-row ant-form-item-row"
                              >
                                <div
                                  class="ant-col ant-form-item-label"
                                >
                                  <label
                                    class=""
                                    for="0_access_policy_set"
                                    title="Access Policy Set"
                                  >
                                    Access Policy Set
                                  </label>
                                </div>
                                <div
                                  class="ant-col ant-form-item-control"
                                >
                                  <div
                                    class="ant-form-item-control-input"
                                  >
                                    <div
                                      class="ant-form-item-control-input-content"
                                    >
                                      <div
                                        class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                                      >
                                        <div
                                          class="ant-select-selector"
                                        >
                                          <span
                                            class="ant-select-selection-search"
                                          >
                                            <input
                                              aria-activedescendant="0_access_policy_set_list_0"
                                              aria-autocomplete="list"
                                              aria-controls="0_access_policy_set_list"
                                              aria-haspopup="listbox"
                                              aria-owns="0_access_policy_set_list"
                                              autocomplete="off"
                                              class="ant-select-selection-search-input"
                                              id="0_access_policy_set"
                                              readonly=""
                                              role="combobox"
                                              style="opacity: 0;"
                                              type="search"
                                              unselectable="on"
                                              value=""
                                            />
                                          </span>
                                          <span
                                            class="ant-select-selection-placeholder"
                                          >
                                            Select...
                                          </span>
                                        </div>
                                        <span
                                          aria-hidden="true"
                                          class="ant-select-arrow"
                                          style="user-select: none;"
                                          unselectable="on"
                                        >
                                          <span
                                            aria-label="down"
                                            class="anticon anticon-down ant-select-suffix"
                                            role="img"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="64 64 896 896"
                                              width="1em"
                                            >
                                              <path
                                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-col ant-col-offset-1"
                          >
                            <button
                              class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                              type="button"
                            >
                              <span>
                                Add Access Policy Set
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-pro-steps-form-step"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="1"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="ant-row"
                >
                  <div
                    class="ant-col ant-col-16"
                  >
                    <h3
                      class="ant-typography styledComponents__Title-sc-1ibvcih-3 dConwg"
                    >
                      Summary
                    </h3>
                    <div
                      class="ant-row"
                    >
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="Policy Name"
                              >
                                Policy Name
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="List Expiration"
                              >
                                List Expiration
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  >
                                    Never expires
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="Automatically clean expired entries"
                              >
                                Automatically clean expired entries
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  >
                                    No
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="Behavior"
                              >
                                Behavior
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  >
                                    Always redirect to authenticate user
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="Redirect URL"
                              >
                                Redirect URL
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  >
                                    http://www.website.com
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="Default Access"
                              >
                                Default Access
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  >
                                    Accept
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class=""
                                title="Access Policy"
                              >
                                Access Policy
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-typography"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 dVvdlc"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <button
                  class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                  disabled=""
                  type="button"
                >
                  <span>
                    Back
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 kkpPZG"
                  type="button"
                >
                  <span>
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`MacRegistrationListForm should edit list successfully 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/tenant-id/policies/mac-registration-lists"
              >
                Policies & Profiles &gt; MAC Registration Lists
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Configure Registration pool
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 bMQYiE"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 fzFjZo"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="0"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
                >
                  <div
                    class="ant-row"
                  >
                    <div
                      class="ant-col ant-col-14"
                    >
                      <div
                        class="ant-row"
                      >
                        <div
                          class="ant-col ant-col-14"
                        >
                          <div
                            class="ant-form-item"
                          >
                            <div
                              class="ant-row ant-form-item-row"
                            >
                              <div
                                class="ant-col ant-form-item-label"
                              >
                                <label
                                  class="ant-form-item-required"
                                  for="0_name"
                                  title="Policy Name"
                                >
                                  Policy Name
                                </label>
                              </div>
                              <div
                                class="ant-col ant-form-item-control"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <input
                                      class="ant-input"
                                      id="0_name"
                                      type="text"
                                      value=""
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-form-item"
                          >
                            <div
                              class="ant-row ant-form-item-row"
                            >
                              <div
                                class="ant-col ant-form-item-label"
                              >
                                <label
                                  class=""
                                  for="0_listExpiration"
                                  title="List Expiration"
                                >
                                  List Expiration
                                </label>
                              </div>
                              <div
                                class="ant-col ant-form-item-control"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <div
                                      class="ant-radio-group ant-radio-group-outline"
                                      id="0_listExpiration"
                                    >
                                      <div
                                        class="ant-space ant-space-vertical"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="margin-bottom: 8px;"
                                        >
                                          <label
                                            class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                          >
                                            <span
                                              class="ant-radio"
                                            >
                                              <input
                                                checked=""
                                                class="ant-radio-input"
                                                type="radio"
                                                value="1"
                                              />
                                              <span
                                                class="ant-radio-inner"
                                              />
                                            </span>
                                            <span>
                                              Never expires
                                            </span>
                                          </label>
                                        </div>
                                        <div
                                          class="ant-space-item"
                                          style="margin-bottom: 8px;"
                                        >
                                          <div
                                            class="ant-space ant-space-horizontal ant-space-align-center"
                                          >
                                            <div
                                              class="ant-space-item"
                                            >
                                              <label
                                                class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                              >
                                                <span
                                                  class="ant-radio ant-radio-checked"
                                                >
                                                  <input
                                                    class="ant-radio-input"
                                                    type="radio"
                                                    value="2"
                                                  />
                                                  <span
                                                    class="ant-radio-inner"
                                                  />
                                                </span>
                                                <span>
                                                  By date
                                                </span>
                                              </label>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          class="ant-space-item"
                                        >
                                          <div
                                            class="ant-space ant-space-horizontal ant-space-align-center"
                                          >
                                            <div
                                              class="ant-space-item"
                                            >
                                              <label
                                                class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                              >
                                                <span
                                                  class="ant-radio"
                                                >
                                                  <input
                                                    class="ant-radio-input"
                                                    type="radio"
                                                    value="3"
                                                  />
                                                  <span
                                                    class="ant-radio-inner"
                                                  />
                                                </span>
                                                <span>
                                                  After...
                                                </span>
                                              </label>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-form-item"
                              >
                                <div
                                  class="ant-row ant-form-item-row"
                                >
                                  <div
                                    class="ant-col ant-form-item-label"
                                  >
                                    <label
                                      class=""
                                      for="0_autoCleanup"
                                      title="Automatically clean expired entries"
                                    >
                                      Automatically clean expired entries
                                    </label>
                                  </div>
                                  <div
                                    class="ant-col ant-form-item-control"
                                  >
                                    <div
                                      class="ant-form-item-control-input"
                                    >
                                      <div
                                        class="ant-form-item-control-input-content"
                                      >
                                        <button
                                          aria-checked="true"
                                          class="ant-switch ant-switch-checked"
                                          id="0_autoCleanup"
                                          role="switch"
                                          type="button"
                                        >
                                          <div
                                            class="ant-switch-handle"
                                          />
                                          <span
                                            class="ant-switch-inner"
                                          />
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-form-item"
                          >
                            <div
                              class="ant-row ant-form-item-row"
                            >
                              <div
                                class="ant-col ant-form-item-label"
                              >
                                <label
                                  class=""
                                  for="0_defaultAccess"
                                  title="Default Access"
                                >
                                  Default Access
                                </label>
                              </div>
                              <div
                                class="ant-col ant-form-item-control"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <div
                                      class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
                                    >
                                      <div
                                        class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                                      >
                                        <label
                                          class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio-button ant-radio-button-checked"
                                          >
                                            <input
                                              checked=""
                                              class="ant-radio-button-input"
                                              type="radio"
                                              value="accept"
                                            />
                                            <span
                                              class="ant-radio-button-inner"
                                            />
                                          </span>
                                          <span>
                                            ACCEPT
                                          </span>
                                        </label>
                                        <label
                                          class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio-button"
                                          >
                                            <input
                                              class="ant-radio-button-input"
                                              type="radio"
                                              value="reject"
                                            />
                                            <span
                                              class="ant-radio-button-inner"
                                            />
                                          </span>
                                          <span>
                                            REJECT
                                          </span>
                                        </label>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-col ant-col-24"
                        >
                          <div
                            class="ant-row ant-row-middle"
                          >
                            <div
                              class="ant-col ant-col-14"
                            >
                              <div
                                class="ant-form-item"
                              >
                                <div
                                  class="ant-row ant-form-item-row"
                                >
                                  <div
                                    class="ant-col ant-form-item-label"
                                  >
                                    <label
                                      class=""
                                      for="0_access_policy_set"
                                      title="Access Policy Set"
                                    >
                                      Access Policy Set
                                    </label>
                                  </div>
                                  <div
                                    class="ant-col ant-form-item-control"
                                  >
                                    <div
                                      class="ant-form-item-control-input"
                                    >
                                      <div
                                        class="ant-form-item-control-input-content"
                                      >
                                        <div
                                          class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                                        >
                                          <div
                                            class="ant-select-selector"
                                          >
                                            <span
                                              class="ant-select-selection-search"
                                            >
                                              <input
                                                aria-activedescendant="0_access_policy_set_list_0"
                                                aria-autocomplete="list"
                                                aria-controls="0_access_policy_set_list"
                                                aria-haspopup="listbox"
                                                aria-owns="0_access_policy_set_list"
                                                autocomplete="off"
                                                class="ant-select-selection-search-input"
                                                id="0_access_policy_set"
                                                readonly=""
                                                role="combobox"
                                                style="opacity: 0;"
                                                type="search"
                                                unselectable="on"
                                                value=""
                                              />
                                            </span>
                                            <span
                                              class="ant-select-selection-placeholder"
                                            >
                                              Select...
                                            </span>
                                          </div>
                                          <span
                                            aria-hidden="true"
                                            class="ant-select-arrow"
                                            style="user-select: none;"
                                            unselectable="on"
                                          >
                                            <span
                                              aria-label="down"
                                              class="anticon anticon-down ant-select-suffix"
                                              role="img"
                                            >
                                              <svg
                                                aria-hidden="true"
                                                data-icon="down"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-col ant-col-offset-1"
                            >
                              <button
                                class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                                type="button"
                              >
                                <span>
                                  Add Access Policy Set
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 dVvdlc"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 kkpPZG"
              type="button"
            >
              <span>
                Finish
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`MacRegistrationListForm should edit list successfully(By date) 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/tenant-id/policies/mac-registration-lists"
              >
                Policies & Profiles &gt; MAC Registration Lists
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Configure Registration pool
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 bMQYiE"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 fzFjZo"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="0"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
                >
                  <div
                    class="ant-row"
                  >
                    <div
                      class="ant-col ant-col-14"
                    >
                      <div
                        class="ant-row"
                      >
                        <div
                          class="ant-col ant-col-14"
                        >
                          <div
                            class="ant-form-item"
                          >
                            <div
                              class="ant-row ant-form-item-row"
                            >
                              <div
                                class="ant-col ant-form-item-label"
                              >
                                <label
                                  class="ant-form-item-required"
                                  for="0_name"
                                  title="Policy Name"
                                >
                                  Policy Name
                                </label>
                              </div>
                              <div
                                class="ant-col ant-form-item-control"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <input
                                      class="ant-input"
                                      id="0_name"
                                      type="text"
                                      value=""
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-form-item"
                          >
                            <div
                              class="ant-row ant-form-item-row"
                            >
                              <div
                                class="ant-col ant-form-item-label"
                              >
                                <label
                                  class=""
                                  for="0_listExpiration"
                                  title="List Expiration"
                                >
                                  List Expiration
                                </label>
                              </div>
                              <div
                                class="ant-col ant-form-item-control"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <div
                                      class="ant-radio-group ant-radio-group-outline"
                                      id="0_listExpiration"
                                    >
                                      <div
                                        class="ant-space ant-space-vertical"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="margin-bottom: 8px;"
                                        >
                                          <label
                                            class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                          >
                                            <span
                                              class="ant-radio"
                                            >
                                              <input
                                                checked=""
                                                class="ant-radio-input"
                                                type="radio"
                                                value="1"
                                              />
                                              <span
                                                class="ant-radio-inner"
                                              />
                                            </span>
                                            <span>
                                              Never expires
                                            </span>
                                          </label>
                                        </div>
                                        <div
                                          class="ant-space-item"
                                          style="margin-bottom: 8px;"
                                        >
                                          <div
                                            class="ant-space ant-space-horizontal ant-space-align-center"
                                          >
                                            <div
                                              class="ant-space-item"
                                            >
                                              <label
                                                class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                              >
                                                <span
                                                  class="ant-radio ant-radio-checked"
                                                >
                                                  <input
                                                    class="ant-radio-input"
                                                    type="radio"
                                                    value="2"
                                                  />
                                                  <span
                                                    class="ant-radio-inner"
                                                  />
                                                </span>
                                                <span>
                                                  By date
                                                </span>
                                              </label>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          class="ant-space-item"
                                        >
                                          <div
                                            class="ant-space ant-space-horizontal ant-space-align-center"
                                          >
                                            <div
                                              class="ant-space-item"
                                            >
                                              <label
                                                class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                              >
                                                <span
                                                  class="ant-radio"
                                                >
                                                  <input
                                                    class="ant-radio-input"
                                                    type="radio"
                                                    value="3"
                                                  />
                                                  <span
                                                    class="ant-radio-inner"
                                                  />
                                                </span>
                                                <span>
                                                  After...
                                                </span>
                                              </label>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-form-item"
                              >
                                <div
                                  class="ant-row ant-form-item-row"
                                >
                                  <div
                                    class="ant-col ant-form-item-label"
                                  >
                                    <label
                                      class=""
                                      for="0_autoCleanup"
                                      title="Automatically clean expired entries"
                                    >
                                      Automatically clean expired entries
                                    </label>
                                  </div>
                                  <div
                                    class="ant-col ant-form-item-control"
                                  >
                                    <div
                                      class="ant-form-item-control-input"
                                    >
                                      <div
                                        class="ant-form-item-control-input-content"
                                      >
                                        <button
                                          aria-checked="true"
                                          class="ant-switch ant-switch-checked"
                                          id="0_autoCleanup"
                                          role="switch"
                                          type="button"
                                        >
                                          <div
                                            class="ant-switch-handle"
                                          />
                                          <span
                                            class="ant-switch-inner"
                                          />
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-form-item"
                          >
                            <div
                              class="ant-row ant-form-item-row"
                            >
                              <div
                                class="ant-col ant-form-item-label"
                              >
                                <label
                                  class=""
                                  for="0_defaultAccess"
                                  title="Default Access"
                                >
                                  Default Access
                                </label>
                              </div>
                              <div
                                class="ant-col ant-form-item-control"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <div
                                      class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
                                    >
                                      <div
                                        class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                                      >
                                        <label
                                          class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio-button ant-radio-button-checked"
                                          >
                                            <input
                                              checked=""
                                              class="ant-radio-button-input"
                                              type="radio"
                                              value="accept"
                                            />
                                            <span
                                              class="ant-radio-button-inner"
                                            />
                                          </span>
                                          <span>
                                            ACCEPT
                                          </span>
                                        </label>
                                        <label
                                          class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item"
                                        >
                                          <span
                                            class="ant-radio-button"
                                          >
                                            <input
                                              class="ant-radio-button-input"
                                              type="radio"
                                              value="reject"
                                            />
                                            <span
                                              class="ant-radio-button-inner"
                                            />
                                          </span>
                                          <span>
                                            REJECT
                                          </span>
                                        </label>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-col ant-col-24"
                        >
                          <div
                            class="ant-row ant-row-middle"
                          >
                            <div
                              class="ant-col ant-col-14"
                            >
                              <div
                                class="ant-form-item"
                              >
                                <div
                                  class="ant-row ant-form-item-row"
                                >
                                  <div
                                    class="ant-col ant-form-item-label"
                                  >
                                    <label
                                      class=""
                                      for="0_access_policy_set"
                                      title="Access Policy Set"
                                    >
                                      Access Policy Set
                                    </label>
                                  </div>
                                  <div
                                    class="ant-col ant-form-item-control"
                                  >
                                    <div
                                      class="ant-form-item-control-input"
                                    >
                                      <div
                                        class="ant-form-item-control-input-content"
                                      >
                                        <div
                                          class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                                        >
                                          <div
                                            class="ant-select-selector"
                                          >
                                            <span
                                              class="ant-select-selection-search"
                                            >
                                              <input
                                                aria-activedescendant="0_access_policy_set_list_0"
                                                aria-autocomplete="list"
                                                aria-controls="0_access_policy_set_list"
                                                aria-haspopup="listbox"
                                                aria-owns="0_access_policy_set_list"
                                                autocomplete="off"
                                                class="ant-select-selection-search-input"
                                                id="0_access_policy_set"
                                                readonly=""
                                                role="combobox"
                                                style="opacity: 0;"
                                                type="search"
                                                unselectable="on"
                                                value=""
                                              />
                                            </span>
                                            <span
                                              class="ant-select-selection-placeholder"
                                            >
                                              Select...
                                            </span>
                                          </div>
                                          <span
                                            aria-hidden="true"
                                            class="ant-select-arrow"
                                            style="user-select: none;"
                                            unselectable="on"
                                          >
                                            <span
                                              aria-label="down"
                                              class="anticon anticon-down ant-select-suffix"
                                              role="img"
                                            >
                                              <svg
                                                aria-hidden="true"
                                                data-icon="down"
                                                fill="currentColor"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-col ant-col-offset-1"
                            >
                              <button
                                class="ant-btn ant-btn-link styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                                type="button"
                              >
                                <span>
                                  Add Access Policy Set
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 dVvdlc"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 kkpPZG"
              type="button"
            >
              <span>
                Finish
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
